--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <header>
         <h1>Hello! I am Xuewen Yang &#128075;</h1>
         <h3>Welcome to my site!</h3>
+        <input type="checkbox" id="side-menu">
+        <label class="hamburger" for="side-menu">
+            <span class="hamb-line"></span>
+            <span class="hamb-line"></span>
+            <span class="hamb-line"></span>
+        </label>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
