--- a/pages/experiment.html
+++ b/pages/experiment.html
@@ -9,6 +9,12 @@
 <body>
     <header>
         <h1>Experiment Page</h1>
+        <input type="checkbox" id="side-menu">
+        <label class="hamburger" for="side-menu">
+            <span class="hamb-line"></span>
+            <span class="hamb-line"></span>
+            <span class="hamb-line"></span>
+        </label>
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
