--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,6 +10,12 @@
 <body>
     <header>
         <h1>Contact Me</h1>
+        <input type="checkbox" id="side-menu">
+        <label class="hamburger" for="side-menu">
+            <span class="hamb-line"></span>
+            <span class="hamb-line"></span>
+            <span class="hamb-line"></span>
+        </label>
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
@@ -26,12 +32,6 @@
             <summary>Contact Information</summary>
             <p>Email: xuy001@ucsd.edu</p>
             <p>Email: xuewenyang1@gmail.com</p>
-            <!-- <ul>
-                <li>Email: xuy001@ucsd.edu</li>
-                <li>Email: xuewenyang1@gmail.com</li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/xuewen-daphne-yang/" target="_blank"><img src="../media/linkedin-icon.png" alt="linkedin profile"></a></li>
-                <li>GitHub: <a href="https://github.com/daphneyyy" target="_blank"><img src="../media/github-icon.png" alt="github profile"></a></li>
-            </ul> -->
         </details>
         <form action="#">
             <fieldset id="contact_form">
