--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,86 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Projects</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link type="text/css" href="../css/styles.css" rel="stylesheet">
-    <link type="text/css" href="../css/styles-projects.css" rel="stylesheet">
-    <!-- <style>
-        body {
-            border: 4px solid #b8b8b8;
-        }
-    </style> -->
-</head>
-<body>
-    <header>
-        <h1>My Projects</h1>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="experiment.html">Experiment</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="project">
-            <div class="project-content">
-                <h2>Project 1</h2>
-                <div class="proj-description">
-                    <p>Description of Project 1</p>
-                    <p>Description of Project 1</p>
-                    <p>Description of Project 1</p>
-                    <p>Description of Project 1</p>
+    <head>
+        <title>Projects</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans"
+            rel="stylesheet">
+        <link type="text/css" href="../css/styles.css" rel="stylesheet">
+        <link type="text/css" href="../css/styles-projects.css" rel="stylesheet">
+    </head>
+    <body>
+        <header>
+            <h1>My Projects</h1>
+            <input type="checkbox" id="side-menu">
+            <label class="hamburger" for="side-menu">
+                <span class="hamb-line"></span>
+                <span class="hamb-line"></span>
+                <span class="hamb-line"></span>
+            </label>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="experiment.html">Experiment</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section class="project">
+                <div class="project-content">
+                    <h2>Project 1</h2>
+                    <div class="proj-description">
+                        <p>Description of Project 1</p>
+                        <p>Description of Project 1</p>
+                        <p>Description of Project 1</p>
+                        <p>Description of Project 1</p>
+                    </div>
+                    <a href="#" target="_blank">View Project</a>
                 </div>
-                <a href="#" target="_blank">View Project</a>
-            </div>
-            <figure>
-                <img src="#" alt="Project 1 Image">
-                <figcaption>Project 1 Image Caption</figcaption>
-            </figure>
-        </section>
-        <section class="project">
-            <div class="project-content">
-                <h2>Project 2</h2>
-                <div class="proj-description">
-                    <p>Description of Project 2</p>
-                    <p>Description of Project 2</p>
-                    <p>Description of Project 2</p>
-                    <p>Description of Project 2</p>
+                <figure>
+                    <!-- <img src="#" alt="Project 1 Image"> -->
+                    <picture>
+                        <!-- Define multiple image sources for different screen sizes -->
+                        <source media="(min-width: 1024px)"
+                            srcset="../images/project1-large.jpg">
+                        <source media="(min-width: 768px)"
+                            srcset="../images/project1-medium.jpg">
+                        <source media="(max-width: 767px)"
+                            srcset="../images/project1-small.jpg">
+                        <!-- Fallback for browsers that don't support <picture> -->
+                        <img src="../images/project1-large.jpg"
+                            alt="Project 1 Image">
+                    </picture>
+                    <figcaption>Project 1 Image Caption</figcaption>
+                </figure>
+            </section>
+            <section class="project">
+                <div class="project-content">
+                    <h2>Project 2</h2>
+                    <div class="proj-description">
+                        <p>Description of Project 2</p>
+                        <p>Description of Project 2</p>
+                        <p>Description of Project 2</p>
+                        <p>Description of Project 2</p>
+                    </div>
+                    <a href="#" target="_blank">View Project</a>
                 </div>
-                <a href="#" target="_blank">View Project</a>
-            </div>
-            <figure>
-                <img src="#" alt="Project 2 Image">
-                <figcaption>Project 2 Image Caption</figcaption>
-            </figure>
-        </section>
-        <section class="project">
-            <div class="project-content">
-                <h2>Project 3</h2>
-                <div class="proj-description">
-                    <p>Description of Project 3</p>
-                    <p>Description of Project 3</p>
-                    <p>Description of Project 3</p>
-                    <p>Description of Project 3</p>
+                <figure>
+                    <!-- <img src="#" alt="Project 2 Image"> -->
+                    <picture>
+                        <!-- Define multiple image sources for different screen sizes -->
+                        <source media="(min-width: 1024px)"
+                            srcset="../images/project2-large.jpg">
+                        <source media="(min-width: 768px)"
+                            srcset="../images/project2-medium.jpg">
+                        <source media="(max-width: 767px)"
+                            srcset="../images/project2-small.jpg">
+                        <!-- Fallback for browsers that don't support <picture> -->
+                        <img src="../images/project2-large.jpg"
+                            alt="Project 2 Image">
+                    </picture>
+                    <figcaption>Project 2 Image Caption</figcaption>
+                </figure>
+            </section>
+            <section class="project">
+                <div class="project-content">
+                    <h2>Project 3</h2>
+                    <div class="proj-description">
+                        <p>Description of Project 3</p>
+                        <p>Description of Project 3</p>
+                        <p>Description of Project 3</p>
+                        <p>Description of Project 3</p>
+                    </div>
+                    <a href="#" target="_blank">View Project</a>
                 </div>
-                <a href="#" target="_blank">View Project</a>
+                <figure>
+                    <!-- <img src="#" alt="Project 3 Image"> -->
+                    <picture>
+                        <!-- Define multiple image sources for different screen sizes -->
+                        <source media="(min-width: 1024px)"
+                            srcset="../images/project3-large.jpg">
+                        <source media="(min-width: 768px)"
+                            srcset="../images/project3-medium.jpg">
+                        <source media="(max-width: 767px)"
+                            srcset="../images/project3-small.jpg">
+                        <!-- Fallback for browsers that don't support <picture> -->
+                        <img src="../images/project3-large.jpg"
+                            alt="Project 3 Image">
+                    </picture>
+                    <figcaption>Project 3 Image Caption</figcaption>
+                </figure>
+            </section>
+        </main>
+        <footer>
+            <div id="footer-logo">
+                <a href="https://www.linkedin.com/in/xuewen-daphne-yang/"
+                    target="_blank"><img src="../media/linkedin-icon.png"
+                        alt="linkedin profile"></a>
+                <a href="https://github.com/daphneyyy" target="_blank"><img
+                        src="../media/github-icon.png" alt="github profile"></a>
             </div>
-            <figure>
-                <img src="#" alt="Project 3 Image">
-                <figcaption>Project 3 Image Caption</figcaption>
-            </figure>
-        </section>
-    </main>
-    <footer>
-        <div id="footer-logo">
-            <a href="https://www.linkedin.com/in/xuewen-daphne-yang/" target="_blank"><img src="../media/linkedin-icon.png" alt="linkedin profile"></a>
-            <a href="https://github.com/daphneyyy" target="_blank"><img src="../media/github-icon.png" alt="github profile"></a>
-        </div>
-        <span>&copy; 2023 Xuewen Yang</span>
-    </footer>
-</body>
+            <span>&copy; 2023 Xuewen Yang</span>
+        </footer>
+    </body>
 </html>
