New layout for home page

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <link type="text/css" href="../css/styles.css" rel="stylesheet">
-        <link type="text/css" href="../css/styles-about.css" rel="stylesheet">
+        <!-- <link type="text/css" href="../css/styles-about.css" rel="stylesheet"> -->
     </head>
     <body>
         <header>
@@ -22,56 +22,11 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="experiment.html">Experiment</a></li>
+<!--                    <li><a href="experiment.html">Experiment</a></li>-->
                 </ul>
             </nav>
         </header>
         <main>
-            <section class="intro">
-                <!-- <img src="../media/headshot.JPG" alt="Headshot"> -->
-                <picture>
-                    <source srcset="../media/headshot.webp" type="image/webp">
-                    <source srcset="../media/headshot.jpg" type="image/jpeg">
-                    <img src="../media/headshot.jpg" alt="Headshot of Xuewen Yang" />
-                </picture>
-                <table class="info-content">
-                    <tr>
-                        <th colspan="2"><h2>Personal Info</h2></th>
-                    </tr>
-                    <tr>
-                        <td><h3>Education</h3></td>
-                        <td>
-                            <p>University of California, San Diego</p>
-                            <p><i>9/2020 - 3/2024</i></p>
-                            <p>Major 1: B.S. in Math-Computer Science</p>
-                            <p>Major 2: B.S. in Data Science</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><h3>Location</h3></td>
-                        <td>San Francisco, CA</td>
-                    </tr>
-                    <tr>
-                        <td><h3>Interests</h3></td>
-                        <td>
-                            <ol>
-                                <li>Listening to music</li>
-                                <li>Watching K-dramas and Chinese dramas</li>
-                                <li>Playing video games</li>
-                                <li>Singing</li>
-                            </ol>
-                        </td>
-                    </tr>
-                </table>
-
-                <aside>
-                    <p><span id="san_francisco">San Francisco</span>, perched on the California peninsula, is a
-                        culturally diverse and innovative city, renowned for its
-                        iconic landmarks, tech industry influence, and vibrant
-                        culture, set against a backdrop of steep hills and a
-                        moderate climate.</p>
-                </aside>
-            </section>
             <section class="work">
                 <div class="work-content">
                     <h2>Work Experience</h2>
