--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link type="text/css" href="css/styles.css" rel="stylesheet">
-    <link type="text/css" href="css/styles-home.css" rel="stylesheet">
+    <link type="text/css" href="css/styles-home.css" rel="stylesheet" !important>
     <link href="#" rel="icon">
     <script src="#"></script>
 </head>
@@ -28,12 +28,82 @@
                 <li><a href="pages/about.html">About</a></li>
                 <li><a href="pages/projects.html">Projects</a></li>
                 <li><a href="pages/contact.html">Contact</a></li>
-                <li><a href="pages/experiment.html">Experiment</a></li>
+<!--                <li><a href="pages/experiment.html">Experiment</a></li>-->
             </ul>
         </nav>
     </header>
 
     <main>
+
+        <!-- <section class="intro"> -->
+            <!-- <img src="../media/headshot.JPG" alt="Headshot"> -->
+            <picture class="headshot">
+                <source srcset="../media/headshot.webp" type="image/webp">
+                <source srcset="../media/headshot.jpg" type="image/jpeg">
+                <img src="../media/headshot.jpg" alt="Headshot of Xuewen Yang" />
+            </picture>
+            <section class="education">
+                <h2>Education &#127979;</h2>
+                <hr />
+                <p>University of California, San Diego</p>
+                <p>La Jolla, CA</p>
+                <p><em>9/2020 - 3/2024</em></p>
+                <p>Major 1: B.S. in Math-Computer Science</p>
+                <p>Major 2: B.S. in Data Science</p>
+            </section>
+            <section class="location">
+                <h2>Location &#128204;</h2>
+                <hr />
+                <p>Born and raised in &#127464;&#127475; Guangdong, China.</p>
+                <p>Moved to &#127745; San Francisco, CA in 2017.</p>
+                <p>Currently living in &#127965; San Diego, CA.</p>
+            </section>
+            
+            <section class="interests">
+                <h2>Interests &#128293;</h2>
+                <hr />
+                <ul>
+                    <li>Listening to music</li>
+                    <li>Watching K-dramas and Chinese dramas</li>
+                    <li>Playing video games</li>
+                    <li>Singing</li>
+                </ul>
+            </section>
+            <!-- <table class="info-content">
+                <tr>
+                    <td><h3>Education</h3></td>
+                    <td>
+                        <p>University of California, San Diego</p>
+                        <p><i>9/2020 - 3/2024</i></p>
+                        <p>Major 1: B.S. in Math-Computer Science</p>
+                        <p>Major 2: B.S. in Data Science</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td><h3>Location</h3></td>
+                    <td>San Francisco, CA</td>
+                </tr>
+                <tr>
+                    <td><h3>Interests</h3></td>
+                    <td>
+                        <ol>
+                            <li>Listening to music</li>
+                            <li>Watching K-dramas and Chinese dramas</li>
+                            <li>Playing video games</li>
+                            <li>Singing</li>
+                        </ol>
+                    </td>
+                </tr>
+            </table> -->
+
+<!--                <aside>-->
+<!--                    <p>San Francisco, perched on the California peninsula, is a-->
+<!--                        culturally diverse and innovative city, renowned for its-->
+<!--                        iconic landmarks, tech industry influence, and vibrant-->
+<!--                        culture, set against a backdrop of steep hills and a-->
+<!--                        moderate climate.</p>-->
+<!--                </aside>-->
+        <!-- </section> -->
         <!-- <picture>
             <source media="(min-width:650px)" srcset="#">
             <source media="(min-width:465px)" srcset="#">
@@ -41,11 +111,11 @@
         </picture>
         <br>
         <br> -->
-        <section class="videos" id="video1">
-            <video controls muted>
-                <source src="media/bowling.mov" type="video/mp4">
-                <p>Your browser doesn't support HTML5 video.</p>
-            </video>
+        <!-- <section class="videos" id="video1">
+           <video controls muted>
+               <source src="media/bowling.mov" type="video/mp4">
+               <p>Your browser doesn't support HTML5 video.</p>
+           </video>
             <div class="video-description">
                 <p>some text some text some text some text some text</p>
                 <p>some text some text some text some text some text</p>
@@ -64,12 +134,12 @@
                 <p>some text some text some text some text some text</p>
                 <p>some text some text some text some text some text</p>
             </div>
-            <video controls muted>
-                <source src="media/ice_skating.mov" type="video/mp4" loading="lazy">
-                <p>Your browser doesn't support HTML5 video.</p>
-            </video>
+           <video controls muted>
+               <source src="media/ice_skating.mov" type="video/mp4" loading="lazy">
+               <p>Your browser doesn't support HTML5 video.</p>
+           </video>
         </section>
-        <!-- <section class="videos" id="video3">
+        <section class="videos" id="video3">
             <video controls muted>
                 <source src="media/archery.mov" type="video/mp4">
                 <p>Your browser doesn't support HTML5 video.</p>
