--- a/pages/projects.html
+++ b/pages/projects.html
@@ -23,7 +23,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="experiment.html">Experiment</a></li>
+<!--                    <li><a href="experiment.html">Experiment</a></li>-->
                 </ul>
             </nav>
         </header>
